# icfpc-2025

./: .editorconfig  .gitignore  LICENSE  README.md  build.sbt  simple_repl.py
.github/workflows/: main.yml
bash-example/: README.md  gen_tab.py  probatio.sh  submit.sh  table.csv
clojure/: project.clj
clojure/src/icfpc2015/: main.clj
clojure/src/icfpc2025/: main.clj
fortran/solver/: CMakeLists.txt  DOXYGEN  README.md
fortran/solver/examples/: primus.txt  probatio.txt
fortran/solver/src/: API.f90  CMakeLists.txt  door.f90  guess.f90  library.f90  main.f90  plan.f90  random.f90  room.f90  solution.f90  solver.f90  step.f90  task.f90
python/: graphs.py  server.py
src/main/scala/ru/org/codingteam/icfpc_2025/: Domain.scala  DynamicSolver.scala  FactEngine.scala  Graph.scala  Lanternarius.scala  Main.scala  SatSolver.scala  Solver.scala  Traverser.scala  Æedificium.scala
src/test/scala/ru/org/codingteam/icfpc_2025/: FactEngineTests.scala  TestTests.scala  TraverserTests.scala
